# Shared-dinners-distributor

./: .gitignore  Cargo.toml  LICENSE  README.md  extract.py  generate_walking_times.py  setup.sh
scripts/: google_answers_to_people.py  make_xlsx.py  upload_to_drive.py
src/: config.rs  geo.rs  main.rs  model.rs  output.rs  solver.rs
