[package]
name = "progressive_dinner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "progressive_dinner"
path = "src/main.rs"

[dependencies]
# CSV parsing
csv = "1.3"
# YAML config parsing
serde_yaml = "0.9"
# JSON for cache files
serde_json = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
# HTTP client for geocoding + routing APIs
reqwest = { version = "0.11", features = ["blocking", "json"] }
# Random number generation (for simulated annealing)
rand = "0.8"
# Logging
log = "0.4"
env_logger = "0.10"
# Error handling
anyhow = "1.0"
# URL encoding
urlencoding = "2.1"
# Date/time (not strictly needed but useful)
chrono = "0.4"
